Fix prompt sizing issue not fitting content

--- a/style.css
+++ b/style.css
@@ -75,7 +75,7 @@ body{
     align-items: center;
     justify-content: center;
     width: 20%;
-    height: 30%;
+    height: 40%;
     position: fixed;
     transform: translate(-50%,-50%);
     top: 50%;
